--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^1.7.18",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-separator": "^1.0.3",
+    "@vercel/analytics": "^1.1.3",
+    "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
